--- a/src/style/index.less
+++ b/src/style/index.less
@@ -17,7 +17,9 @@
     border-radius: 6px;
     margin: 16px;
 }
-
+.ant-menu-vertical.ant-menu-sub, .ant-menu-vertical-left.ant-menu-sub, .ant-menu-vertical-right.ant-menu-sub {
+    max-height: initial !important;
+}
 // Header
 .ant-menu-submenu-horizontal .ant-menu-vertical .logout{
     padding: 0;
